deploy/bases/rails/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
  name: stats-viewer
  namespace: default
spec:
  ingressClassName: public
  rules:
  - host: stats.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: stats-viewer
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: ruby.hephy.pro
    http:
      paths:
      - backend:
          service:
            name: stats-viewer
            port:
              number: 80
        path: /
        pathType: Prefix
